# Makefile.am - top level automake file for libtmrm
#
# http://libtmrm.ravn.no
#
# This file is licensed under the 
# GNU Lesser General Public License (LGPL) V2.1 or any newer version
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Library General Public License for more details.
#
# You should have received a copy of the GNU Library General Public
# License along with this program; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# Copyright (C) 2008 Jan Schreiber http://purl.org/net/jans
# Copyright (C) 2008 Ravn Webveveriet AS, NO http://www.ravn.no
#
# Parts of the code are taken from the Redland library, http://librdf.org
#
# Copyright (C) 2000-2007 David Beckett http://purl.org/net/dajobe/
# Copyright (C) 2000-2005 University of Bristol, UK http://www.bristol.ac.uk/

ACLOCAL_AMFLAGS = -I m4
ACLOCAL_FLAGS = -I m4
 
SUBDIRS = src . tests

EXTRA_DIST=README README.osx README.splint BUGS TODO sql/pgsql.sql swig/libtmrm.i swig/libtmrm.py

#LIBTOOL_DEPS = @LIBTOOL_DEPS@
#libtool: $(LIBTOOL_DEPS)
#    $(SHELL) ./config.status --recheck

